syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

enum BlossomScheduleState {
    BLOSSOM_SCHEDULE_NONE = 0;
    BLOSSOM_SCHEDULE_INIT = 1;
    BLOSSOM_SCHEDULE_IN_PROGRESS = 2;
    BLOSSOM_SCHEDULE_REWARD = 3;
}

message BlossomBriefInfo {
    uint32 refresh_id = 13;
    uint32 reward_id = 5;
    uint32 city_id = 10;
    uint32 resin = 11;
    uint32 state = 7;
    bool is_guide_opened = 1;
    uint32 monster_level = 8;
    uint32 circle_camp_id = 15;
    Vector pos = 12;
    uint32 scene_id = 9;
}

message GetBlossomBriefInfoListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2772;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint32 city_id_list = 4;
}

message GetBlossomBriefInfoListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2798;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 12;
    repeated BlossomBriefInfo brief_info_list = 11;
}

message BlossomBriefInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2712;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated BlossomBriefInfo brief_info_list = 4;
}

message WorldOwnerBlossomBriefInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2735;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated BlossomBriefInfo brief_info_list = 13;
}

message BlossomScheduleInfo {
    uint32 progress = 13;
    uint32 state = 10;
    uint32 round = 4;
    uint32 circle_camp_id = 15;
    uint32 refresh_id = 6;
    uint32 finish_progress = 14;
}

message WorldOwnerBlossomScheduleInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2707;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    BlossomScheduleInfo schedule_info = 3;
}

message BlossomChestCreateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2721;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 refresh_id = 1;
    uint32 circle_camp_id = 10;
}

message OpenBlossomCircleCampGuideNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 2703;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 refresh_id = 7;
    repeated uint32 circle_camp_id_list = 11;
}
